<resources>
    <!--  Login page  -->
    <string name="app_name">Assignment_3</string>
    <string name="login_heading">Sign in</string>
    <string name="login_name_placeholder">Name</string>
    <string name="login_password_placeholder">Password</string>
    <string name="login_button">Sign in</string>

    <!--  inventory page  -->
    <string name="inventory_heading">Inventory</string>
    <string name="inventory_output">Add some items to your inventory</string>
    <string name="users_button_label">Users</string>
    <string name="users_button_text">User management button</string>
    <string name="inventory_button_text">Inventory button</string>
    <string name="inventory_label">Inventory</string>
    <string name="add_button_text">Add item button</string>
    <string name="add_label">Add item</string>
    <string name="logout_button_text">Log out button</string>
    <string name="logout_label">Log out</string>
    <string name="button_prev">Previous</string>
    <string name="button_next">Next</string>
    <string name="clear_items_text">Clear items</string>
    <string name="test_items_text">Test items</string>

    <!--  add item page  -->
    <string name="add_item_heading">Add an item</string>
    <string name="add_item_name">Item name</string>
    <string name="add_item_number">Quantity</string>
    <string name="add_item_type_label">Item type</string>
    <string name="cancel_item_button">Cancel</string>
    <string name="add_item_button">Add</string>

    <!--    user management page    -->
    <string name="user_management_heading">User management</string>
    <string name="view_user_button">View users</string>
    <string name="delete_user_button">Delete user</string>
    <string name="add_user_button">Add user</string>

    <!--    view user page   -->
    <string name="view_user_heading">View users</string>
    <string name="users_output">Add some users to your database first</string>
    <string name="button_close_view_users">Back</string>

    <!--    delete user page   -->
    <string name="delete_user_heading">Delete user</string>
    <string name="input_username">Username</string>
    <string name="button_cancel_delete_user">Cancel</string>
    <string name="button_delete_user">Delete</string>

    <!--    add user page   -->
    <string name="add_user_heading">Add user</string>
    <string name="add_user_username">Username</string>
    <string name="add_user_password">Password</string>
    <string name="add_user_dob">DOB</string>
    <string name="add_user_employee_number">Employee number</string>
    <string name="add_user_phone_number">Phone number</string>
    <string name="add_user_address">Address</string>
    <string name="add_user_button_cancel">Cancel</string>
    <string name="add_user_button_submit">Add</string>

</resources>