<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserManagementActivity">

    <ImageView
        android:id="@+id/usersIconLogOut"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/logout_button_text"
        app:layout_constraintBottom_toTopOf="@+id/usersTextLogoutLabel"
        app:layout_constraintEnd_toEndOf="@+id/usersTextLogoutLabel"
        app:layout_constraintStart_toStartOf="@+id/usersTextLogoutLabel"
        app:srcCompat="@drawable/ic_sign_out" />

    <TextView
        android:id="@+id/usersTextInventoryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/inventory_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/usersTextLogoutLabel"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/usersTextLogoutLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="153dp"
        android:layout_marginLeft="153dp"
        android:layout_marginBottom="16dp"
        android:text="@string/logout_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/usersTextInventoryLabel" />

    <ImageView
        android:id="@+id/usersIconInventory"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/inventory_button_text"
        app:layout_constraintBottom_toTopOf="@+id/usersTextInventoryLabel"
        app:layout_constraintEnd_toEndOf="@+id/usersTextInventoryLabel"
        app:layout_constraintStart_toStartOf="@+id/usersTextInventoryLabel"
        app:srcCompat="@drawable/ic_inventory" />

    <Button
        android:id="@+id/buttonDeleteUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_user_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textUserManagementHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/user_management_heading"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonViewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/view_user_button"
        app:layout_constraintBottom_toTopOf="@+id/buttonDeleteUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonAddUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_user_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDeleteUser" />

</androidx.constraintlayout.widget.ConstraintLayout>